添加电脑端搜索框样式

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -34,7 +34,7 @@
 
 <!--top attached 完整拼接成一个相连区域 bottom attached-->
 <!--中间内容-->
-<div id="pointTop" class="m-container-normal m-padded-tb-4em ">
+<div id="pointTop" class="m-container m-padded-tb-4em ">
     <div class="ui container">
         <div class="ui stackable grid">
             <div class="eleven wide column">
