--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -11,10 +11,11 @@
     <link rel="stylesheet" href="../static/lib/prism/prism.css" th:href="@{/lib/prism/prism.css}"/>
     <link rel="stylesheet" href="../static/lib/tocbot/tocbot.css" th:href="@{/lib/tocbot/tocbot.css}"/>
     <link rel="stylesheet" href="../static/css/me.css " th:href="@{/css/me.css}"/>
+    <link rel="stylesheet" href="../static/css/style.css " th:href="@{/css/style.css}"/>
 </head>
 <body>
 
-<nav th:fragment="menu(n)"  class="m-padded-tb-mini animated fadeInDown m-back-grass-small">
+<nav th:fragment="menu(n)" class="m-padded-tb-mini animated fadeInDown m-back-grass-small">
     <div class="ui container">
         <div class="ui inverted secondary stackable  menu">  <!--stackable 可堆叠的 应用在移动端-->
             <h2 class="ui teal header item">猫喵喵</h2>
@@ -30,14 +31,16 @@
                     class="clone icon"></i>归档</a>
             <a href="#" th:href="@{/about}" class="nav_item item m-mobile-hide" th:classappend="${n == 5} ? 'active'"><i
                     class="info icon"></i>关于我</a>
-            <div class="nav_item right item m-mobile-hide" style="background-color: rgb(0 0 0 / 70%);">
-                <form action="#" th:action="@{/search}" name="search">
-                    <div class="ui icon inverted transparent  input">
-                        <input type="text" name="query" placeholder="快来找你要的东东ヾ(≧▽≦*)o..." required="required" th:value="${query}">
+            <div class=" m-mobile-hide m-search">
+                <i class="search line icon funIcon"></i>
+                <i class="close line icon funIcon no "></i>
+                <form content="m-mobile-show" action="#" th:action="@{/search}" name="search">
+                    <div class="form">
+                        <input type="text" name="query" placeholder="快来找你要的东东ヾ(≧▽≦*)o" required="required"
+                               th:value="${query}">
                         <i onclick="document.forms['search'].submit()" class="search link icon"></i>
                     </div>
                 </form>
-
             </div>
 
         </div>
@@ -47,7 +50,8 @@
     </a>
 </nav>
 <!--底部footer-->
-<footer th:fragment="footer" class="ui inverted vertical segment m-padded-tb-massive" style="padding: 40px 0px!important;">
+<footer id="footer" th:fragment="footer" class="ui inverted vertical segment m-padded-tb-massive"
+        style="padding: 40px 0px!important;">
     <!--    居中-->
     <div class="ui center aligned container">
         <div class="ui inverted divided stackable grid">
@@ -63,7 +67,8 @@
                 <h4 class="ui inverted header">最新博客</h4>
                 <div id="newBlog-container">
                     <div class="ui inverted link list m-text-thin m-text-spaced" th:fragment="newBlogList">
-                        <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="item" th:each="blog : ${newBlogs}" th:text="${blog.title}">用户故事</a>
+                        <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="item"
+                           th:each="blog : ${newBlogs}" th:text="${blog.title}">用户故事</a>
                     </div>
                 </div>
             </div>
@@ -86,7 +91,7 @@
     </div>
 
     <div th:if="${blog}==null" id="toolbar" class="m-fixed m-bottom-right m-padded" style="display: none">
-        <a  id="comment_toTop" class="m-toTop">
+        <a id="comment_toTop" class="m-toTop">
             <i class="ui angle up icon"></i>
         </a>
     </div>
@@ -100,6 +105,15 @@
     <script th:src="@{/lib/qrcode/qrcode.min.js}"></script>
     <script th:src="@{/lib/waypoint/jquery.waypoints.min.js}"></script>
     <script>
+
+        $(".funIcon").click(function () {
+            $('.m-search').toggleClass('m-active');
+            $('.search.line').toggleClass('no');
+            $('.close').toggleClass('no');
+            $('#pointTop').toggleClass('no');
+            $('#footer').toggleClass('no');
+        });
+
         $(function () {
             $('#newBlog-container').load(/*[[@{/footer/newBlog}]]*/"/Blog/footer/newBlog");
         });
