经济某些冲突

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -9,7 +9,7 @@
     transition: .5s!important;
 }
 
-.m-search .icon {
+.m-search .funIcon,.s-icon {
     width: 67px!important;
     height: 67px!important;
     line-height: 67px!important;
