--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -38,7 +38,7 @@
                     <div class="form">
                         <input type="text" name="query" placeholder="快来找你要的东东ヾ(≧▽≦*)o" required="required"
                                th:value="${query}">
-                        <i onclick="document.forms['search'].submit()" class="search link icon"></i>
+                        <i onclick="document.forms['search'].submit()" class="search link icon s-icon"></i>
                     </div>
                 </form>
             </div>
