--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="_fragments::head(~{::title})">
+<head >
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>博客详情</title>
+    <link rel="icon" href="#" th:href="@{/images/logo.ico}"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
-    <!--    css动画引入animate css插件 如果是3及一下版本要使用先加入animated-->
-    <link rel="stylesheet" href="../static/lib/animate/animate.min.css">
-    <!--    引入中文排版插件-->
-    <link rel="stylesheet" href="../static/lib/typo/typo.css">
-    <!--    引入代码高亮插件 prism-->
-    <link rel="stylesheet" href="../static/lib/prism/prism.css">
-    <!--    目录生成Tocbot-->
-    <link rel="stylesheet" href="../static/lib/tocbot/tocbot.css">
-
+    <link rel="stylesheet" href="../static/lib/animate/animate.min.css" th:href="@{/lib/animate/animate.min.css}"/>
+    <link rel="stylesheet" href="../static/lib/typo/typo.css" th:href="@{/lib/typo/typo.css}"/>
+    <link rel="stylesheet" href="../static/lib/prism/prism.css" th:href="@{/lib/prism/prism.css}"/>
+    <link rel="stylesheet" href="../static/lib/tocbot/tocbot.css" th:href="@{/lib/tocbot/tocbot.css}"/>
     <link rel="stylesheet" href="../static/css/me.css " th:href="@{/css/me.css}"/>
 </head>
 <body>
 <!--导航-->
-<nav th:replace="_fragments::menu(0)" class="ui inverted attached segment m-padded-tb-mini animated fadeInDown">
+<nav  class="m-padded-tb-mini animated fadeInDown m-back-grass-small">
     <div class="ui container">
         <div class="ui inverted secondary stackable  menu">  <!--stackable 可堆叠的 应用在移动端-->
-            <h2 class="ui teal header item">Blog</h2>
-            <a href="#" class="nav_item item m-mobile-hide"><i class="home icon"></i>首页</a>
-            <a href="#" class="nav_item item m-mobile-hide"><i class="idea icon"></i>分类</a>
-            <a href="#" class="nav_item item m-mobile-hide"><i class="tags icon"></i>标签</a>
-            <a href="#" class="nav_item item m-mobile-hide"><i class="clone icon"></i>归档</a>
-            <a href="#" class="nav_item item m-mobile-hide"><i class="mini info icon"></i>关于我</a>
-            <div class="nav_item right item m-mobile-hide">
-                <div class="ui icon inverted transparent  input">
-                    <input type="text" placeholder="Search...">
-                    <i class="search link icon"></i>
-                </div>
+            <h2 class="ui teal header item">猫喵喵</h2>
+            <a href="#" th:href="@{/}" class="nav_item item m-mobile-hide" th:classappend="${n == 1} ? 'active'"><i
+                    class="home icon"></i>首页</a>
+            <a href="#" th:href="@{/types/-1}" class="nav_item item m-mobile-hide"
+               th:classappend="${n == 2} ? 'active'"><i
+                    class="idea icon"></i>分类</a>
+            <a href="#" th:href="@{/tags/-1}" class="nav_item item m-mobile-hide" th:classappend="${n == 3} ? 'active'"><i
+                    class="tags icon"></i>标签</a>
+            <a href="#" th:href="@{/archives}" class="nav_item item m-mobile-hide"
+               th:classappend="${n == 4} ? 'active'"><i
+                    class="clone icon"></i>归档</a>
+            <a href="#" th:href="@{/about}" class="nav_item item m-mobile-hide" th:classappend="${n == 5} ? 'active'"><i
+                    class="info icon"></i>关于我</a>
+            <div class="right m-item item m-mobile-hide">
+                <form name="search" action="#" th:action="@{/search}" method="post" target="_blank">
+                    <div class="ui icon inverted transparent input m-margin-tb-tiny">
+                        <input type="text" name="query" placeholder="Search...." th:value="${query}">
+                        <i onclick="document.forms['search'].submit()" class="search link icon"></i>
+                    </div>
+                </form>
             </div>
 
         </div>
