--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,7 +37,7 @@
     <!--container 响应式的容器-->
     <div class="ui  container">
         <div class="ui ">
-            <!--    左边部分-->
+            <!--    左边部分这部分已删除-->
 
             <!--博客列表-->
             <div class="ten wide column  m-mobile-top-15px m-back-grass animated fadeIn">
