--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -103,8 +103,8 @@
                     </div>
 
                     <div class="five wide column">
-                        <a href="#" target="_parent">
-                            <img src="https://unsplash.it/800/450?image=1005" th:src="@{${blog.firstPicture}}" alt=""
+                        <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank">
+                            <img src="https://unsplash.it/800/450?image=1005"  th:src="@{${blog.firstPicture}}" alt=""
                                  class="ui rounded image">
                         </a>
                     </div>
