--- a/src/main/resources/templates/admin/types-input.html
+++ b/src/main/resources/templates/admin/types-input.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../../static/css/me.css" th:href="@{/css/me.css}">
 </head>
 
-<body>
+<body class="m-back-img1">
 <!--导航-->
 <nav th:replace="admin/_fragments::menu(2)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
     <div class="ui container">
