--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title th:replace="${title}">博客详情</title>
+
     <link rel="icon" href="#" th:href="@{/images/logo.ico}"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
     <link rel="stylesheet" href="../static/lib/animate/animate.min.css" th:href="@{/lib/animate/animate.min.css}"/>
@@ -15,7 +16,7 @@
 </head>
 <body>
 
-<nav th:fragment="menu(n)" class="m-padded-tb-mini animated fadeInDown m-back-grass-small">
+<nav th:fragment="menu(n)" class="animated fadeInDown m-back-grass m-fixed-w">
     <div class="ui container">
         <div class="ui inverted secondary stackable  menu">  <!--stackable 可堆叠的 应用在移动端-->
             <h2 class="ui teal header item">猫喵喵</h2>
@@ -29,65 +30,43 @@
             <a href="#" th:href="@{/archives}" class="nav_item item m-mobile-hide"
                th:classappend="${n == 4} ? 'active'"><i
                     class="clone icon"></i>归档</a>
-            <a href="#" th:href="@{/about}" class="nav_item item m-mobile-hide" th:classappend="${n == 5} ? 'active'"><i
+            <a href="#" th:href="@{/guestbook}" class="nav_item item m-mobile-hide"
+               th:classappend="${n == 5} ? 'active'"><i
+                    class="comments outline icon"></i>留言板</a>
+            <a href="#" th:href="@{/about}" class="nav_item item m-mobile-hide" th:classappend="${n == 6} ? 'active'"><i
                     class="info icon"></i>关于我</a>
+
+
             <div class=" m-mobile-hide m-search">
                 <i class="search line icon funIcon"></i>
                 <i class="close line icon funIcon no "></i>
                 <form content="m-mobile-show" action="#" th:action="@{/search}" name="search">
-                    <div class="form">
+                    <div class="m-form">
                         <input type="text" name="query" placeholder="快来找你要的东东ヾ(≧▽≦*)o" required="required"
                                th:value="${query}">
                         <i onclick="document.forms['search'].submit()" class="search link icon s-icon"></i>
                     </div>
                 </form>
             </div>
+            <div class="nav_search right item no">
+                <form name="search" action="#" th:action="@{/search}" method="post" target="_blank">
+                    <div class="ui icon inverted transparent input m-margin-tb-tiny">
+                        <input type="text" name="query" placeholder="Search...." th:value="${query}">
+                        <i onclick="document.forms['search'].submit()" class="search link icon"></i>
+                    </div>
+                </form>
+            </div>
 
         </div>
     </div>
-    <a href="#" id="menu_toggle" class="ui black button m-mobile-show m-top-right ">
+    <span  id="menu_toggle" class="ui black button m-mobile-show m-top-right ">
         <i class="sidebar icon"></i>
-    </a>
+    </span>
 </nav>
 <!--底部footer-->
-<footer id="footer" th:fragment="footer" class="ui inverted vertical segment m-padded-tb-massive"
-        style="padding: 40px 0px!important;">
-    <!--    居中-->
-    <div class="ui center aligned container">
-        <div class="ui inverted divided stackable grid">
-            <div class="three wide column">
-                <div class="ui inverted link list">
-                    <div class="item">
-                        <img src="../static/images/微信二维码1.png" th:src="@{/images/weixin.png}" class="ui rounded image"
-                             alt="" width="110px">
-                    </div>
-                </div>
-            </div>
-            <div class="three wide column">
-                <h4 class="ui inverted header">最新博客</h4>
-                <div id="newBlog-container">
-                    <div class="ui inverted link list m-text-thin m-text-spaced" th:fragment="newBlogList">
-                        <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="item"
-                           th:each="blog : ${newBlogs}" th:text="${blog.title}">用户故事</a>
-                    </div>
-                </div>
-            </div>
-            <div class="three wide column">
-                <h4 class="ui inverted header">联系我</h4>
-                <div class="ui inverted link list m-text-thin m-text-spaced">
-                    <a href="#" class="item" th:text="'Email:'+#{index.email}">Email：1447051936@qq.com</a>
-                    <a href="#" class="item" th:text="'QQ:'+#{index.QQ}">QQ:1447051936</a>
-                </div>
-            </div>
-            <div class="seven wide column">
-                <h4 class="ui inverted header">Blog</h4>
-                <p class="m-text-thin m-text-spaced m-opacity" th:text="#{index.blogDescription}">
-                    这厮我的个人博客，会分享关于编程，思考，随笔相关的内容，欢迎大家访问，希望可以给到这的人有所帮助...
-                </p>
-            </div>
-        </div>
-        <div class="ui inverted section divider"></div>
-        <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright &copy; 2021 by Newbie Zry</p>
+<footer id="footer" th:fragment="footer" class="ui container ">
+    <!--    居中--><div class="ui center aligned container m-padded-tb-1em">
+        <p class="m-text-thin m-text-spaced" style="color: whitesmoke">Copyright &copy; 2021 by <a src="#" th:src="@{/}">猫喵喵</a></p>
     </div>
 
     <div th:if="${blog}==null" id="toolbar" class="m-fixed m-bottom-right m-padded" style="display: none">
@@ -104,6 +83,9 @@
     <script th:src="@{/lib/tocbot/tocbot.min.js}"></script>
     <script th:src="@{/lib/qrcode/qrcode.min.js}"></script>
     <script th:src="@{/lib/waypoint/jquery.waypoints.min.js}"></script>
+    <script th:src="@{/js/snowFall.js}"></script>
+<!--    网易云歌单 by : https://wp.gxnas.com/5786.html-->
+    <script src="https://myhkw.cn/player/js/player.js"  id="myhk" key="demo" m="1"></script>
     <script>
 
         $(".funIcon").click(function () {
@@ -112,11 +94,12 @@
             $('.close').toggleClass('no');
             $('#pointTop').toggleClass('no');
             $('#footer').toggleClass('no');
+            $('#header').toggleClass('no');
         });
-
-        $(function () {
-            $('#newBlog-container').load(/*[[@{/footer/newBlog}]]*/"/Blog/footer/newBlog");
-        });
+        //
+        // $(function () {
+        //     $('#newBlog-container').load(/*[[@{/footer/newBlog}]]*/"/Blog/footer/newBlog");
+        // });
 
         $("#comment_toTop").click(function () {
             $(window).scrollTo(0, 300);
