--- a/src/main/resources/templates/archives.html
+++ b/src/main/resources/templates/archives.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
     <link rel="stylesheet" href="../static/css/me.css">
 </head>
-<body>
+<body class="m-back-img2">
 <!--导航-->
 <nav th:replace="_fragments::menu(4)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
     <div class="ui container">
@@ -34,7 +34,7 @@
 
 <!--top attached 完整拼接成一个相连区域 bottom attached-->
 <!--中间内容-->
-<div id="pointTop" class="m-container-small m-padded-tb-4em ">
+<div id="pointTop" class="m-container-small m-padded-tb-4em m-padded-top-best">
     <div class="ui container">
         <!-- header-->
         <div class="ui top attached segment animated flipInX">
@@ -114,12 +114,7 @@
 
     $("#menu_toggle").click(function () {
         $(".nav_item").toggleClass('m-mobile-hide');
-        /*    //定义和用法$(selector).toggleClass(class,switch)
-                toggleClass() 对设置或移除被选元素的一个或多个类进行切换。
-
-        该方法检查每个元素中指定的类。如果不存在则添加类，如果已设置则删除之。这就是所谓的切换效果。
-
-        不过，通过使用 "switch" 参数，您能够规定只删除或只添加类。*/
+        $(".nav_search").toggleClass('no');
     });
 
 </script>
