--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
     <link rel="stylesheet" href="../static/css/me.css">
 </head>
-<body>
+<body class="m-back-img2">
 <!--导航-->
 <nav th:replace="_fragments::menu(3)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
     <div class="ui container">
@@ -33,7 +33,7 @@
 </nav>
 <!--top attached 完整拼接成一个相连区域 bottom attached-->
 <!--中间内容-->
-<div id="pointTop" class="m-container-small m-padded-tb-4em ">
+<div id="pointTop" class="m-container-small m-padded-tb-4em m-padded-top-best">
     <div class="ui container">
         <!-- header-->
         <div class="ui top attached segment m-border-radius animated flipInX">
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </div>
-        <div class="ui attached segment m-padded-tb-2em m-border-radius animated fadeIn ">
+        <div class="ui attached segment  m-back-grass-deep m-padded-tb-2em m-border-radius animated fadeIn ">
             <a href="#" th:href="@{/tags/{id}(id=${tag.id})}"
                class="ui  basic left pointing large label m-margin-tb-tiny m-card-mod"
                th:classappend="${activeTagId==tag.id} ? 'teal'" th:each="tag : ${tags}">
@@ -55,7 +55,7 @@
                 <div class="detail" th:text="${tag.blogCount}">23</div>
             </a>
         </div>
-        <div class="ui top attached  segment  m-border-radius animated fadeInUp">
+        <div class="ui top attached  segment  m-back-grass-deep   m-border-radius animated fadeInUp">
             <div class="ui padded  segment m-padded-tb-2em m-mobile-clear m-card" th:each="blog : ${pageInfo.list}">
                 <div class="ui mobile reversed stackable grid">  <!--mobile reversed  手机反转-->
                     <div class="eleven wide column">
@@ -63,7 +63,7 @@
                                                  class="m-black" th:text="${blog.title}">你真的理解什么是财富自由吗?</a></h3>
                         <p class="m-text" th:text="|${blog.description}....|"> 滴哦是是你都i送i你都弄上那你nsdin第四卷第是
                         </p>
-                        <div class="ui stackable grid">
+                        <div class="ui grid">
                             <div class="row">
                                 <div class="eleven wide column">
                                     <div class="ui mini horizontal link list">
@@ -113,13 +113,13 @@
         </div>
         <div class="ui bottom attached segment" th:if="${pageInfo.total}>1">
             <div class="ui middle aligned two column grid">
-                <div class="column" th:if="${pageInfo.pageNum != 1}">
+                <div class="column ">
                     <a href="#" th:href="@{'/tags/'+${activeTagId}(page=${page.number}-1)}"
-                       class="ui mini teal basic button ">上一页</a>
+                     th:unless="${pageInfo.isFirstPage}"  class="ui mini teal basic button ">上一页</a>
                 </div>
-                <div class="right aligned column " th:if="${!pageInfo.isLastPage}">
+                <div class="right aligned column ">
                     <a href="#" th:href="@{'/tags/'+${activeTagId}(page=${page.number}-1)}"
-                       class="ui mini teal basic button ">下一页</a>
+                     th:unless="${pageInfo.isLastPage}" class="ui mini teal basic button ">下一页</a>
                 </div>
             </div>
         </div>
@@ -176,6 +176,7 @@
 
     $("#menu_toggle").click(function () {
         $(".nav_item").toggleClass('m-mobile-hide');
+        $(".nav_search").toggleClass('no');
         /*    //定义和用法$(selector).toggleClass(class,switch)
                 toggleClass() 对设置或移除被选元素的一个或多个类进行切换。
 
