--- a/src/main/resources/templates/types.html
+++ b/src/main/resources/templates/types.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
     <link rel="stylesheet" href="../static/css/me.css">
 </head>
-<body>
+<body class="m-back-img2">
 <!--导航-->
 <nav th:replace="_fragments::menu(2)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
     <div class="ui container">
@@ -34,7 +34,7 @@
 
 <!--top attached 完整拼接成一个相连区域 bottom attached-->
 <!--中间内容-->
-<div id="pointTop" class="m-container-small m-padded-tb-4em ">
+<div id="pointTop" class="m-container-small m-padded-tb-4em m-padded-top-best">
     <div class="ui container">
         <!-- header-->
         <div class="ui top attached segment m-border-radius animated flipInX">
@@ -47,17 +47,17 @@
                 </div>
             </div>
         </div>
-        <div class="ui attached segment m-padded-tb-2em m-border-radius animated fadeIn">
+        <div class="ui attached segment  m-back-grass-deep m-padded-tb-2em m-border-radius animated fadeIn">
                 <div class="ui labeled button m-margin-tb-tiny m-card-mod" tabindex="0" th:each="type : ${types}">
-                    <a class="ui basic  button" th:href="@{/types/{id}(id=${type.id})}"  th:classappend="${type.id==activeTypeId} ? 'teal'">
-                        <i class="heart icon " th:classappend="${type.id==activeTypeId} ? 'red'"></i> <span th:text="${type.name}">思考与感悟</span>
+                    <a class="ui  button" th:href="@{/types/{id}(id=${type.id})}"  th:classappend="${type.id==activeTypeId} ? 'teal'">
+                        <i class="heart icon" th:classappend="${type.id==activeTypeId} ? 'red'"></i> <span th:text="${type.name}">思考与感悟</span>
                     </a>
                     <div class="ui basic left pointing label">
                         <span th:text="${type.blogCount}">10,42</span>
                     </div>
                 </div>
         </div>
-        <div class="ui top attached segment m-border-radius animated fadeInUp">
+        <div class="ui top attached segment m-border-radius  m-back-grass-deep animated fadeInUp">
             <div class="ui padded  segment m-padded-tb-2em m-mobile-clear m-card" th:each="blog : ${pageInfo.list}">
                 <div class="ui mobile reversed stackable grid">  <!--mobile reversed  手机反转-->
                     <div class="eleven wide column">
@@ -66,7 +66,7 @@
                             是你都i送i你都弄是你都i送i你都弄是你都i送i你都弄是你都i送i你都弄是你都i送i你都弄
                             是你都i送i你都弄是你都i送i你都弄
                         </p>
-                        <div class="ui stackable grid">
+                        <div class="ui grid">
                             <div class="eleven wide column">
                                 <div class="ui mini horizontal link list">
                                     <div class="item">
@@ -103,11 +103,11 @@
         </div>
         <div class="ui bottom attached segment" th:if="${pageInfo.total}>1">
             <div class="ui middle aligned two column grid" >
-                <div class="column" th:if="${pageInfo.pageNum != 1}">
-                    <a href="#" th:href="@{'/types/'+${activeTypeId}(page=${page.number}-1)}"  class="ui mini teal basic button ">上一页</a>
+                <div class="column">
+                    <a href="#" th:href="@{'/types/'+${activeTypeId}(page=${page.number}-1)}"th:unless="${pageInfo.isFirstPage}" class="ui mini teal basic button ">上一页</a>
                 </div>
-                <div class="right aligned column " th:if="${!pageInfo.isLastPage}">
-                    <a href="#" th:href="@{'/types/'+${activeTypeId}(page=${page.number}-1)}"  class="ui mini teal basic button ">下一页</a>
+                <div class="right aligned column " >
+                    <a href="#" th:href="@{'/types/'+${activeTypeId}(page=${page.number}-1)}" th:unless="${pageInfo.isLastPage}" class="ui mini teal basic button ">下一页</a>
                 </div>
             </div>
         </div>
@@ -164,6 +164,7 @@
 
     $("#menu_toggle").click(function () {
         $(".nav_item").toggleClass('m-mobile-hide');
+        $(".nav_search").toggleClass('no');
         /*    //定义和用法$(selector).toggleClass(class,switch)
                 toggleClass() 对设置或移除被选元素的一个或多个类进行切换。
 
